adapted the map for different devices

--- a/css/main.css
+++ b/css/main.css
@@ -49,26 +49,10 @@ body {
   margin-right: auto;
   padding-right: 0 !important;
 }
-svg {
-  fill: #222;
-}
-
-.active-region {
-  fill: #b7b7b7;
-}
-
-path:hover {
-  fill: #333;
-}
-
-.info {
-  z-index: 100;
-  position: absolute;
-  display: inline-block;
-  width: 130px;
-  background: white;
-  opacity: 0;
-  transition: 0.14s linear;
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .oh {
   overflow: hidden;
@@ -453,6 +437,27 @@ a {
 }
 .about-us--shift .oh {
   padding-top: 10px;
+}
+svg {
+  fill: #222;
+}
+
+.active-region {
+  fill: #b7b7b7;
+}
+
+path:hover {
+  fill: #333;
+}
+
+.info {
+  z-index: 100;
+  position: absolute;
+  display: inline-block;
+  width: 130px;
+  background: white;
+  opacity: 0;
+  transition: 0.14s linear;
 }
 .benefits {
   background: -moz-linear-gradient(
@@ -3535,6 +3540,9 @@ a {
     font-size: 58px;
     line-height: 50px;
   }
+  #svg-map {
+    display: none;
+  }
 }
 @media screen and (max-width: 910px) {
   .benefits__item:hover .benefits__img:before {
@@ -3570,6 +3578,9 @@ a {
   }
   .vacancies__img {
     height: 250px;
+  }
+  #svg-map {
+    display: none;
   }
 }
 @media screen and (max-width: 767px) {
@@ -3876,6 +3887,9 @@ a {
     height: 200px;
     overflow: hidden;
   }
+  #svg-map {
+    display: none;
+  }
 }
 @media screen and (max-width: 600px) {
   .conditions__item {
@@ -3884,6 +3898,9 @@ a {
   .conditions__num:before {
     bottom: -110px;
     height: 80px;
+  }
+  #svg-map {
+    display: none;
   }
 }
 @media screen and (max-width: 500px) {
@@ -4248,6 +4265,9 @@ a {
     padding-top: 7px;
     padding-bottom: 2px;
   }
+  #svg-map {
+    display: none;
+  }
 }
 @media screen and (max-width: 360px) {
   .modal-body {
@@ -4263,6 +4283,9 @@ a {
   .vacancies--img-4 {
     background-position: center bottom;
   }
+  #svg-map {
+    display: none;
+  }
 }
 @media screen and (min-width: 501px) and (max-height: 860px) {
   .modal__btn {
@@ -4272,6 +4295,9 @@ a {
     height: 62px;
     line-height: 62px;
     margin-bottom: 14px;
+  }
+  #svg-map {
+    display: none;
   }
 }
 @media screen and (min-width: 992px) and (max-height: 689px) {
@@ -4287,6 +4313,9 @@ a {
   .intro__p2 {
     font-size: 48px;
   }
+  #svg-map {
+    display: none;
+  }
 }
 @media screen and (min-width: 992px) and (max-height: 620px) {
   .intro__p {
@@ -4297,5 +4326,8 @@ a {
   }
   .intro__p2 {
     font-size: 38px;
+  }
+  #svg-map {
+    display: none;
   }
 }
