--- a/css/main.css
+++ b/css/main.css
@@ -883,6 +883,79 @@ path:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.cards {
+  position: relative;
+
+  list-style-type: none;
+  padding: 100px;
+  max-width: 34em;
+  margin: 20% auto 0;
+}
+
+.card {
+  position: absolute;
+  top: -180px;
+  left: 0;
+  z-index: 2;
+
+  background: #f97cac;
+  border-radius: 30px;
+  padding: 40px;
+  box-shadow: 0 0 20px #828282;
+  transform: translateY(0) rotate(4deg) translateX(25px) scale(1);
+  transform-origin: 0 0;
+
+  transition: transform 0.6s cubic-bezier(0.8, 0.2, 0.1, 0.8) 0.1s,
+    background 0.4s linear;
+
+  cursor: pointer;
+  user-select: none;
+
+  :last-child {
+    margin-bottom: 0;
+  }
+}
+
+.card--next {
+  z-index: 5;
+  transform: translateY(-25px) rotate(4deg) translateX(25px) scale(1);
+  background: #ff73a8;
+}
+
+.card--out {
+  animation: card-out 0.6s cubic-bezier(0.8, 0.2, 0.1, 0.8);
+  transform: translateY(-50px) rotate(8deg) translateX(55px) scale(0.95);
+  z-index: 1;
+  background: #ff73a8;
+}
+
+@keyframes card-out {
+  0% {
+    z-index: 20;
+    transform: translateY(0px) rotate(-4deg);
+  }
+  50% {
+    transform: translateY(-120%) rotate(-5deg) translateX(-40px);
+  }
+  80% {
+    z-index: 1;
+  }
+  100% {
+    transform: translateY(-50px) rotate(8deg) translateX(55px) scale(0.95);
+  }
+}
+
+.card--current {
+  cursor: auto;
+  user-select: auto;
+  /* position: relative; */
+  z-index: 10;
+  opacity: 1;
+  background: #fdd3eb;
+  transform: rotate(-1deg) translateX(0%) scale(1);
+}
+
 .conditions__line {
   background: #d9d9d9;
   width: 155px;
