--- a/css/main.css
+++ b/css/main.css
@@ -2123,6 +2123,51 @@ path:hover {
   top: 561px;
   opacity: 0.2;
 }
+
+.accordion {
+  width: 90%;
+  max-width: 1000px;
+  margin: 2rem auto;
+}
+.accordion-item {
+  background-color: #ff73a8;
+  color: #111;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+}
+.accordion-item-header {
+  padding: 0.5rem 3rem 0.5rem 1rem;
+  font-size: 2.5rem;
+  min-height: 4.5rem;
+  line-height: 1.25rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+.accordion-item-header::after {
+  content: "\002B";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+}
+.accordion-item-header.active::after {
+  content: "\2212";
+}
+.accordion-item-body {
+  font-size: 1.7rem;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+.accordion-item-body-content {
+  padding: 1rem;
+  line-height: 1.5rem;
+  border-top: 1px solid;
+  border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+}
 .footer {
   background: #fdd2eb;
   padding-top: 110px;
@@ -3648,6 +3693,9 @@ path:hover {
   }
 }
 @media screen and (max-width: 910px) {
+  .accordion-item-header {
+    font-size: 14px;
+  }
   .benefits__item:hover .benefits__img:before {
     opacity: 1;
   }
@@ -3687,6 +3735,9 @@ path:hover {
   }
 }
 @media screen and (max-width: 767px) {
+  .accordion-item-header {
+    font-size: 14px;
+  }
   .vacancies__feedback {
     display: none;
   }
