--- a/css/main.css
+++ b/css/main.css
@@ -922,83 +922,45 @@ path:hover {
   -webkit-text-fill-color: transparent;
 }
 
-.cards {
-  position: relative;
-  list-style-type: none;
-  padding: 300px 300px 300px 500px;
-  max-width: 34em;
-  margin: 20% auto 0;
+.album .responsive-container-block {
+  min-height: 75px;
+  height: fit-content;
+  width: 100%;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0px;
+  margin-right: auto;
+  margin-bottom: 0px;
+  margin-left: auto;
+  justify-content: flex-start;
 }
 
-.card__first {
-  padding: 250px 300px 100px 500px;
+.album .responsive-container-block.bg {
+  max-width: 1320px;
+  margin: 0 0 0 0;
+  justify-content: space-between;
 }
 
-.card {
-  position: absolute;
-  top: -180px;
-  left: 0;
-  z-index: 2;
-
-  background: #f97cac;
-  border-radius: 30px;
-  padding: 40px;
-  box-shadow: 0 0 20px #828282;
-  transform: translateY(0) rotate(4deg) translateX(25px) scale(1);
-  transform-origin: 0 0;
-
-  transition: transform 0.6s cubic-bezier(0.8, 0.2, 0.1, 0.8) 0.1s,
-    background 0.4s linear;
-
-  cursor: pointer;
-  user-select: none;
-
-  :last-child {
-    margin-bottom: 0;
-  }
+.album .img {
+  width: 100%;
+  margin: 0 0 20px 0;
 }
 
-.card__box {
-  /* display: flex; */
+.album .responsive-container-block.img-cont {
+  flex-direction: column;
+  max-width: 33.3%;
+  min-height: auto;
+  margin: 0 0 0 0;
+  height: 100%;
 }
 
-.card--next {
-  z-index: 5;
-  transform: translateY(-25px) rotate(4deg) translateX(25px) scale(1);
-  background: #ff73a8;
-}
-
-.card--out {
-  animation: card-out 0.6s cubic-bezier(0.8, 0.2, 0.1, 0.8);
-  transform: translateY(-50px) rotate(8deg) translateX(55px) scale(0.95);
-  z-index: 1;
-  background: #ff73a8;
-}
-
-@keyframes card-out {
-  0% {
-    z-index: 20;
-    transform: translateY(0px) rotate(-4deg);
-  }
-  50% {
-    transform: translateY(-120%) rotate(-5deg) translateX(-40px);
-  }
-  80% {
-    z-index: 1;
-  }
-  100% {
-    transform: translateY(-50px) rotate(8deg) translateX(55px) scale(0.95);
-  }
-}
-
-.card--current {
-  cursor: auto;
-  user-select: auto;
-  /* position: relative; */
-  z-index: 10;
-  opacity: 1;
-  background: #fdd3eb;
-  transform: rotate(-1deg) translateX(0%) scale(1);
+.album .img.img-big {
+  height: 50%;
+  margin: 0 0 16px 0;
 }
 
 .conditions__line {
@@ -3319,12 +3281,6 @@ path:hover {
   }
 }
 @media screen and (max-width: 1300px) {
-  .cards_second {
-    display: none;
-  }
-  .cards {
-    padding: 200px 100px 100px 500px;
-  }
   .vacancies__btn {
     font-size: 19px;
   }
@@ -3351,12 +3307,6 @@ path:hover {
   }
 }
 @media screen and (max-width: 1199px) {
-  .cards_second {
-    display: none;
-  }
-  .card__first {
-    padding: 200px 100px 100px 500px;
-  }
   .vacancies__reward {
     font-size: 31px;
     line-height: 36px;
@@ -3666,18 +3616,11 @@ path:hover {
   }
 }
 @media screen and (max-width: 1100px) {
-  .cards__second {
-    display: none;
-  }
-  .card__first {
-    margin-top: 200px;
-    padding: 100px 100px 200px 500px;
-  }
   .benefits__img {
     height: 290px;
   }
-  .cards_second {
-    display: none;
+  .album .img {
+    margin: 0 0 18px 0;
   }
 }
 @media screen and (max-width: 991px) {
@@ -3790,11 +3733,28 @@ path:hover {
   }
 }
 @media screen and (max-width: 767px) {
+  .album .img {
+    max-width: 32.5%;
+    margin: 0 0 0 0;
+  }
+
+  .album .responsive-container-block.bg {
+    flex-direction: column;
+  }
+
+  .album .responsive-container-block.img-cont {
+    max-width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .album .img.img-big {
+    max-width: 49%;
+    margin: 0 0 0 0;
+  }
+
   .accordion-item-header {
     line-height: 1.9rem;
-  }
-  .vacancies__feedback {
-    display: none;
   }
   .vacancies__btn {
     font-size: 22.8px;
@@ -4114,11 +4074,28 @@ path:hover {
   #svg-map {
     display: none;
   }
-  .vacancies__feedback {
-    display: none;
-  }
 }
 @media screen and (max-width: 500px) {
+  .album .img {
+    max-width: 94%;
+    margin: 0 0 25px 0;
+  }
+
+  .album .responsive-container-block.img-cont {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 10px 10px;
+  }
+
+  .album .img.img-big {
+    max-width: 94%;
+    margin: 0 0 25px 0;
+  }
+
+  .album .img.img-last {
+    margin: 0 0 5px 0;
+  }
+
   .menu__item {
     height: 40px;
     line-height: 40px;
@@ -4555,9 +4532,6 @@ path:hover {
     font-size: 38px;
   }
   #svg-map {
-    display: none;
-  }
-  #feedback {
     display: none;
   }
 }
