--- a/css/main.css
+++ b/css/main.css
@@ -4595,6 +4595,12 @@ path:hover {
   }
 }
 
+@media screen and (max-width: 321px) {
+  .circle1 {
+    margin-bottom: 480px;
+  }
+}
+
 @media screen and (min-width: 501px) and (max-height: 860px) {
   .modal__btn {
     margin-top: 24px;
