--- a/css/main.css
+++ b/css/main.css
@@ -2759,6 +2759,7 @@ path:hover {
   padding-left: 50px;
   padding-right: 50px;
 }
+
 .modal__input:focus,
 .modal__input:active {
   background: #ffffbd;
@@ -2766,9 +2767,9 @@ path:hover {
   box-shadow: inset 0px 0px 20px rgba(226, 69, 160, 0.5);
   border: none;
 }
-.modal--select {
+/* .modal--select {
   border-radius: 30px 0 0 30px;
-}
+} */
 .close {
   float: none;
   font-size: 21px;
